[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/battle/battle_arena.gd" type="Script" id=1]
[ext_resource path="res://src/battle/queue.gd" type="Script" id=2]
[ext_resource path="res://src/battle/HUDBattle.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/HUD/Caverna.png" type="Texture" id=4]

[node name="BattleArena" type="Node2D"]
script = ExtResource( 1 )

[node name="BackGround" type="Node2D" parent="."]
z_index = -2

[node name="Sprite" type="Sprite" parent="BackGround"]
position = Vector2( 683, 200 )
texture = ExtResource( 4 )

[node name="GUI" parent="." instance=ExtResource( 3 )]
margin_right = 1366.0
margin_bottom = 769.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleQueue" type="YSort" parent="MarginContainer"]
z_index = -1
script = ExtResource( 2 )

[node name="SpawnPositions" type="Node" parent="MarginContainer"]

[node name="Party" type="Node" parent="MarginContainer/SpawnPositions"]

[node name="1" type="Position2D" parent="MarginContainer/SpawnPositions/Party"]
position = Vector2( 72.1, 397.23 )

[node name="2" type="Position2D" parent="MarginContainer/SpawnPositions/Party"]
position = Vector2( 236.706, 393.149 )

[node name="3" type="Position2D" parent="MarginContainer/SpawnPositions/Party"]
position = Vector2( 423.078, 395.87 )

[node name="Enemies" type="Node" parent="MarginContainer/SpawnPositions"]

[node name="1" type="Position2D" parent="MarginContainer/SpawnPositions/Enemies"]
position = Vector2( 1179.73, 325.601 )
